# django-vue

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
core/: index.py
frontend/: package-lock.json  package.json
frontend/src/components/: LoginComponent.vue
frontend/src/router/: index.js
frontend/src/services/: authService.js
frontend/src/views/: HomeView.vue
