[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Christophe Dri <christophe.dri@eryz.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
sqlite-vec = "^0.1.3"
smart-open = "^7.0.5"
django-cors-headers = "^4.7.0"
asgiref ="^3.8.1"
sqlparse = "^0.5.0"
pillow = "^10.3.0"
django-extensions = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
